--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -35,7 +35,7 @@
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
     <url-pattern>/Login</url-pattern>
-    <url-pattern>/</url-pattern>
+    <!--  <url-pattern>/</url-pattern>-->
   </servlet-mapping>
   <servlet>
     <servlet-name>SignUp</servlet-name>
