--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,139 +1,139 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>Sodibet</display-name>
-  <listener>
-    <listener-class>Config.InitialisationDaoFactory</listener-class>
-  </listener>
-  <servlet>
-    <servlet-name>Home</servlet-name>
-    <servlet-class>Srv.Index</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Home</servlet-name>
-    <url-pattern>/Home</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Test</servlet-name>
-    <servlet-class>Srv.Test</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Test</servlet-name>
-    <url-pattern>/Test</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Contact</servlet-name>
-    <servlet-class>Srv.Contact</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Contact</servlet-name>
-    <url-pattern>/Contact</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Ask</servlet-name>
-    <servlet-class>Srv.Ask</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Ask</servlet-name>
-    <url-pattern>/Ask</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Hypot</servlet-name>
-    <servlet-class>Srv.Hypot</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Hypot</servlet-name>
-    <url-pattern>/Hypotheses</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Login</servlet-name>
-    <servlet-class>Srv.Login</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Login</servlet-name>
-    <url-pattern>/Login</url-pattern>
-  </servlet-mapping>
-   <servlet>
-    <servlet-name>LoginAdmin</servlet-name>
-    <servlet-class>Srv.LoginAdmin</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>LoginAdmin</servlet-name>
-    <url-pattern>/LoginAdmin</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>SignUp</servlet-name>
-    <servlet-class>Srv.SignUp</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SignUp</servlet-name>
-    <url-pattern>/SignUp</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Verify</servlet-name>
-    <servlet-class>Srv.Verify</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Verify</servlet-name>
-    <url-pattern>/Verify</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Logout</servlet-name>
-    <servlet-class>Srv.Logout</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Logout</servlet-name>
-    <url-pattern>/Logout</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Predimensionnement</servlet-name>
-    <servlet-class>Srv.Predimensionnement</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Predimensionnement</servlet-name>
-    <url-pattern>/Predimensionnement</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Portee</servlet-name>
-    <servlet-class>Srv.Portee</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Portee</servlet-name>
-    <url-pattern>/Portee</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Epaisseur</servlet-name>
-    <servlet-class>Srv.Epaisseur</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Epaisseur</servlet-name>
-    <url-pattern>/Epaisseur</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>UsersData</servlet-name>
-    <servlet-class>Srv.UsersData</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UsersData</servlet-name>
-    <url-pattern>/UsersData</url-pattern>
-  </servlet-mapping>
-  
-    <servlet>
-    <servlet-name>Hauteur</servlet-name>
-    <servlet-class>Srv.Hauteur</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Hauteur</servlet-name>
-    <url-pattern>/Hauteur</url-pattern>
-  </servlet-mapping>
-  
-  
-      <servlet>
-    <servlet-name>Litrage</servlet-name>
-    <servlet-class>Srv.Litrage</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Litrage</servlet-name>
-    <url-pattern>/Litrage</url-pattern>
-  </servlet-mapping>
+<web-app id="WebApp_ID" version="3.0"
+ xmlns="http://java.sun.com/xml/ns/javaee"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+ <display-name>Sodibet</display-name>
+ <listener>
+  <listener-class>Config.InitialisationDaoFactory</listener-class>
+ </listener>
+ <servlet>
+  <servlet-name>Home</servlet-name>
+  <servlet-class>Srv.Index</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Contact</servlet-name>
+  <servlet-class>Srv.Contact</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Ask</servlet-name>
+  <servlet-class>Srv.Ask</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Hypot</servlet-name>
+  <servlet-class>Srv.Hypot</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Login</servlet-name>
+  <servlet-class>Srv.Login</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>LoginAdmin</servlet-name>
+  <servlet-class>Srv.LoginAdmin</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>SignUp</servlet-name>
+  <servlet-class>Srv.SignUp</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Verify</servlet-name>
+  <servlet-class>Srv.Verify</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Logout</servlet-name>
+  <servlet-class>Srv.Logout</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Predimensionnement</servlet-name>
+  <servlet-class>Srv.Predimensionnement</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Portee</servlet-name>
+  <servlet-class>Srv.Portee</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Epaisseur</servlet-name>
+  <servlet-class>Srv.Epaisseur</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>UsersData</servlet-name>
+  <servlet-class>Srv.UsersData</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Hauteur</servlet-name>
+  <servlet-class>Srv.Hauteur</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Litrage</servlet-name>
+  <servlet-class>Srv.Litrage</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>Plaquette</servlet-name>
+  <servlet-class>Srv.Plaquette</servlet-class>
+ </servlet>
+ <servlet-mapping>
+  <servlet-name>Home</servlet-name>
+  <url-pattern>/Home</url-pattern>
+ </servlet-mapping>
+ 
+ <servlet-mapping>
+  <servlet-name>Contact</servlet-name>
+  <url-pattern>/Contact</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Ask</servlet-name>
+  <url-pattern>/Ask</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Hypot</servlet-name>
+  <url-pattern>/Hypotheses</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Login</servlet-name>
+  <url-pattern>/Login</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>LoginAdmin</servlet-name>
+  <url-pattern>/LoginAdmin</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>SignUp</servlet-name>
+  <url-pattern>/SignUp</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Verify</servlet-name>
+  <url-pattern>/Verify</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Logout</servlet-name>
+  <url-pattern>/Logout</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Predimensionnement</servlet-name>
+  <url-pattern>/Predimensionnement</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Portee</servlet-name>
+  <url-pattern>/Portee</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Epaisseur</servlet-name>
+  <url-pattern>/Epaisseur</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>UsersData</servlet-name>
+  <url-pattern>/UsersData</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Hauteur</servlet-name>
+  <url-pattern>/Hauteur</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Litrage</servlet-name>
+  <url-pattern>/Litrage</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>Plaquette</servlet-name>
+  <url-pattern>/Plaquette</url-pattern>
+ </servlet-mapping>
+ 
 </web-app>
