--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -74,6 +74,10 @@
   <servlet-name>Home</servlet-name>
   <url-pattern>/Home</url-pattern>
  </servlet-mapping>
+ <servlet-mapping>
+ <servlet-name>Home</servlet-name>
+ <url-pattern></url-pattern>
+ </servlet-mapping>
  
  <servlet-mapping>
   <servlet-name>Contact</servlet-name>
