put back 30 epaisseur + hard coded IP adress

--- a/WebContent/WEB-INF/classes/Forms/mail.properties
+++ b/WebContent/WEB-INF/classes/Forms/mail.properties
@@ -1,3 +1,3 @@
-url=http\://localhost\:8080/Sodibet
+url=http\://41.250.109.189\:8080/Sodibet
 nomutilisateur=testsodibet@gmail.com
 motdepasse=sodibettesting
