--- a/src/Forms/mail.properties
+++ b/src/Forms/mail.properties
@@ -1,3 +1,3 @@
-url=http\://localhost\:8080/Sodibet
+url=http\://41.250.109.189\:8080/Sodibet
 nomutilisateur=testsodibet@gmail.com
 motdepasse=sodibettesting
