fixed white spaces in other pages and error page

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -132,4 +132,9 @@
   <url-pattern>/Plaquette</url-pattern>
  </servlet-mapping>
  
+ <error-page>
+        <error-code>404</error-code>
+        <location>//WEB-INF/error.jsp</location>
+</error-page>
+ 
 </web-app>
